<resources>
    <string name="app_name">Do Today</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="done">Done</string>
    <string name="add_task">Add Task</string>
    <string name="no_tasks_message">No tasks yet. Please add a task.</string>
    <string name="save_task">Save Task</string>
    <string name="delete_task_title">Delete Task</string>
    <string name="delete_task_message">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_list_title">Daily List</string>
    <string name="weekly_overview_title">Weekly Overview</string>
    <string name="mon_title">MON</string>
    <string name="tue_title">TUE</string>
    <string name="wed_title">WED</string>
    <string name="thu_title">THU</string>
    <string name="fri_title">FRI</string>
    <string name="sat_title">SAT</string>
    <string name="sun_title">SUN</string>

</resources>