<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.AddTaskFragment">

    <!-- Başlık giriş alanı -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        style="@style/Widget.DoToday.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTaskTitle"
            style="@style/Widget.DoToday.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Açıklama giriş alanı -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        style="@style/Widget.DoToday.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/task_description"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTaskDescription"
            style="@style/Widget.DoToday.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Görevi kaydetme butonu -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSaveTask"
        style="@style/Widget.DoToday.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
